[metadata]
name = naucse_freeze
version = 0.1
description = A tool for archiving content for `naucse`, and for regenerating the archives.
long_description = file: README.md, CHANGELOG.md, LICENSE
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = naucse_archive
install_requires =
    click ~= 8.0
    pyyaml ~= 5.4.1
    lxml ~= 4.6.3
